force-app/main/default/objects/Campaign/fields/BU_Lead__c.field-meta.xml
<CustomField>
    <fullName>BU_Lead__c</fullName>
    <label>BU Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>DPS</fullName>
            </value>
            <value>
                <fullName>APPS</fullName>
            </value>
            <value>
                <fullName>Biometrics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>