force-app/main/default/objects/Campaign/fields/Campaign_web_site__c.field-meta.xml
<CustomField>
    <fullName>Campaign_web_site__c</fullName>
    <description>If the campaign has an associated Web site this is the link</description>
    <inlineHelpText>If the campaign has an associated Web site this is the link</inlineHelpText>
    <label>Campaign Web Site</label>
    <type>Url</type>
</CustomField>