force-app/main/default/objects/Campaign/fields/End_date_time__c.field-meta.xml
<CustomField>
    <fullName>End_date_time__c</fullName>
    <label>End date/ time</label>
    <type>DateTime</type>
</CustomField>