force-app/main/default/objects/Campaign/fields/Is_endate_passed__c.field-meta.xml
<CustomField>
    <fullName>Is_endate_passed__c</fullName>
    <formula>End_date_time__c &lt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is endate passed</label>
    <type>Checkbox</type>
</CustomField>