force-app/main/default/objects/Campaign/fields/SE_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>SE_Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BVS</fullName>
            </value>
            <value>
                <fullName>DPS</fullName>
            </value>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>