force-app/main/default/objects/Campaign/fields/Service_Area_Apps__c.field-meta.xml
<CustomField>
    <fullName>Service_Area_Apps__c</fullName>
    <label>Service Area Apps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apps</fullName>
            </value>
            <value>
                <fullName>X Advisory</fullName>
            </value>
            <value>
                <fullName>X Design</fullName>
            </value>
            <value>
                <fullName>X Solutions</fullName>
            </value>
            <value>
                <fullName>C Advisory</fullName>
            </value>
            <value>
                <fullName>C Architecture</fullName>
            </value>
            <value>
                <fullName>C Build</fullName>
            </value>
            <value>
                <fullName>C Cloud</fullName>
            </value>
            <value>
                <fullName>C Gisbim</fullName>
            </value>
            <value>
                <fullName>C Java</fullName>
            </value>
            <value>
                <fullName>C DevOps &amp; Sec</fullName>
            </value>
            <value>
                <fullName>C Mixr</fullName>
            </value>
            <value>
                <fullName>C .Net</fullName>
            </value>
            <value>
                <fullName>BP High productivity</fullName>
            </value>
            <value>
                <fullName>BP Business Apps</fullName>
            </value>
            <value>
                <fullName>BP Digital Workplace</fullName>
            </value>
            <value>
                <fullName>BP Analytics</fullName>
            </value>
            <value>
                <fullName>BP ERP</fullName>
            </value>
            <value>
                <fullName>B Marketing Services</fullName>
            </value>
            <value>
                <fullName>Q Advisory</fullName>
            </value>
            <value>
                <fullName>Q Solutions</fullName>
            </value>
            <value>
                <fullName>R Bergen</fullName>
            </value>
            <value>
                <fullName>R Drammen</fullName>
            </value>
            <value>
                <fullName>R Nearshore</fullName>
            </value>
            <value>
                <fullName>R Stavanger</fullName>
            </value>
            <value>
                <fullName>R Trondheim</fullName>
            </value>
            <value>
                <fullName>FAST</fullName>
            </value>
            <value>
                <fullName>Agile G2M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>