force-app/main/default/objects/Campaign/fields/Service_Area_BC__c.field-meta.xml
<CustomField>
    <fullName>Service_Area_BC__c</fullName>
    <label>Service Area Advisory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information Management</fullName>
            </value>
            <value>
                <fullName>M365 and Collaboration</fullName>
            </value>
            <value>
                <fullName>Corporate Governance</fullName>
            </value>
            <value>
                <fullName>Information Security</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
            <value>
                <fullName>Project- and Program Management</fullName>
            </value>
            <value>
                <fullName>Change Management</fullName>
            </value>
            <value>
                <fullName>Organizational Transformation</fullName>
            </value>
            <value>
                <fullName>Business Improvement</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Insight and Analysis</fullName>
            </value>
            <value>
                <fullName>Innovation and Business Design</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
            <value>
                <fullName>Summer Interns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>