force-app/main/default/objects/Campaign/fields/Start_date_time__c.field-meta.xml
<CustomField>
    <fullName>Start_date_time__c</fullName>
    <label>Start date/ time</label>
    <type>DateTime</type>
</CustomField>