force-app/main/default/objects/Campaign/fields/total_members__c.field-meta.xml
<CustomField>
    <fullName>total_members__c</fullName>
    <description>Roll up summery of the number of contacts and contact leads in a campaign</description>
    <label>Total members</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>