force-app/main/default/objects/Campaign/fields/Total_registered__c.field-meta.xml
<CustomField>
    <fullName>Total_registered__c</fullName>
    <label>Total registered</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Registered</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>