force-app/main/default/objects/Campaign/recordTypes/Go_to_Marked.recordType-meta.xml
<RecordType>
    <fullName>Go_to_Marked</fullName>
    <active>true</active>
    <label>Go to Marked</label>
</RecordType>