force-app/main/default/objects/Campaign/recordTypes/Pardot.recordType-meta.xml
<RecordType>
    <fullName>Pardot</fullName>
    <active>true</active>
    <description>Campaigns from Account Engagement</description>
    <label>Account Engagement</label>
</RecordType>