force-app/main/default/objects/Campaign/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <description>Sales Campaigns</description>
    <label>Sales</label>
</RecordType>