force-app/main/default/objects/Campaign/listViews/All_Go_to_Marked_Campaigns_NO.listView-meta.xml
<ListView>
    <fullName>All_Go_to_Marked_Campaigns_NO</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Norway</value>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Go_to_Marked</value>
    </filters>
    <label>All Go to Marked Campaigns NO</label>
</ListView>