force-app/main/default/objects/Campaign/listViews/Deltagare_p_AI_Webinar.listView-meta.xml
<ListView>
    <fullName>Deltagare_p_AI_Webinar</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Mine</filterScope>
    <label>Deltagare på AI-Webinar</label>
    <sharedTo>
        <group>SE</group>
    </sharedTo>
</ListView>