force-app/main/default/objects/Campaign/listViews/Kommende_Lynskarp.listView-meta.xml
<ListView>
    <fullName>Kommende_Lynskarp</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>Lynskarp</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>Kundeaktiviteter Business Development</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>2025-</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Norway</value>
    </filters>
    <label>Kommende Lynskarp</label>
</ListView>