force-app/main/default/objects/Campaign/listViews/MyActiveCampaigns.listView-meta.xml
<ListView>
    <fullName>MyActiveCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Start_date_time__c</columns>
    <columns>End_date_time__c</columns>
    <columns>total_members__c</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>Campaign_web_site__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Completed,Aborted</value>
    </filters>
    <label>All Completed Campaigns</label>
</ListView>