force-app/main/default/objects/Campaign/listViews/Pardot_Campaigns1.listView-meta.xml
<ListView>
    <fullName>Pardot_Campaigns1</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Pardot</value>
    </filters>
    <label>Pardot Campaigns</label>
    <sharedTo>
        <group>NO</group>
    </sharedTo>
</ListView>