force-app/main/default/objects/Campaign/listViews/Segmentering.listView-meta.xml
<ListView>
    <fullName>Segmentering</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Segmentering</value>
    </filters>
    <label>Segmentering</label>
</ListView>